--- a/_includes/analytics-providers/google-gtag.html
+++ b/_includes/analytics-providers/google-gtag.html
@@ -1,3 +1,4 @@
+<!-- vim: softtabstop=2 shiftwidth=2 tabstop=2 expandtab: -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <!-- modified for consent: https://ptc-it.de/enabling-cookie-consent-with-jekyll-minimal-mistakes/ -->
 <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.analytics.google.tracking_id }}"></script>
@@ -24,4 +25,3 @@
         });
     }
 </script>
-<!-- vim:set softtabstop=2 shiftwidth=2 tabstop=2 expandtab: -->
